cleanup in prep for DB changes